[metadata]
name = copylot
url = https://royerlab.github.io/copylot/
download_url = https://github.com/royerlab/copylot
license = BSD 3-Clause
license_file = LICENSE.txt
description =  coPylot - microscope control
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    pyqt5==5.15.6
    qdarkstyle==2.8
    nidaqmx==0.5.7
    black>=22.1.0
    flake8==4.0.1
    pre-commit>=2.15.0
    pyserial==3.5
    PyYAML==6.0
    numpy>=1.21.0
    qtpy==1.11.2